@@ -2,7 +2,7 @@ NAME
     marc-filter - Script to filter records in MARC dataset.
 
 SYNOPSIS
-     marc-filter [-h] [-o format] [-r] [--version] marc_xml_file field subfield value
+     marc-filter [-h] [-o format] [-r] [--version] marc_xml_file field [subfield] value
 
 DESCRIPTION
     It supports MARC XML files now.
@@ -34,13 +34,17 @@ ARGUMENTS
 
             MARC field.
 
+            Field number or 'leader' string.
+
     *       "subfield"
 
             MARC subfield.
 
+            It's optional in case of 'leader'.
+
     *       "value"
 
-            MARC field/subfield value to filter.
+            MARC field/subfield or leader value to filter.
 
 REPOSITORY
     <https://github.com/michal-josef-spacek/App-MARC-Filter>
