@@ -1,4 +1,5 @@
 0.04
+ - Add support for leader filtering.
  - Add verbose mode.
  - Update copyright years.
 
